--- a/flask/templates/layout.html
+++ b/flask/templates/layout.html
@@ -1,8 +1,13 @@
 <!doctype html>
+<head>
 <title>jQuery Example</title>
 <script type="text/javascript"
     src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
 <script type="text/javascript">
     var $SCRIPT_ROOT = {{ request.script_root|tojson|safe }};
 </script>
+</head>
+<body>
 {% block body %}{% endblock %}
+</body>
+</html>
